--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "prebuild": "npm install -g @nestjs/cli",
     "build": "nest build",
     "migration:run": "npm run typeorm -- migration:run -d ./dist/src/database/data-source.js",
-    "start": "node dist/src/main.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
