--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/platform-ws": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -64,6 +65,7 @@
     "reflect-metadata": "^0.2.0",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^16.11.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
