--- a/backend/package.json
+++ b/backend/package.json
@@ -68,7 +68,8 @@
     "socket.io": "^4.8.1",
     "stripe": "^16.11.0",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -101,7 +102,6 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
   "jest": {
